// ============================================================
// ANIME RATING PLATFORM
// paste at https://dbdiagram.io/d
// ============================================================

// ─────────────────────────────────────────
// CATALOGS
// ─────────────────────────────────────────

Table genre {
  id int [pk, increment]
  name varchar(100) [not null, unique]
}

// ─────────────────────────────────────────
// CORE
// ─────────────────────────────────────────

Table user {
  id int [pk, increment]
  name varchar(150) [not null, unique]
  created_at timestamp [not null, default: `now()`]
}

Table anime {
  id int [pk, increment]
  title varchar(255) [not null]
  synopsis text
  status varchar(20) [not null, note: 'airing | finished | upcoming | cancelled | hiatus']
  year smallint
  cover_url varchar(500)
  avg_score numeric(7,5) [default: 0, note: 'Maintained by trigger on episode_rating']
  ratings_count int [default: 0, note: 'Maintained by trigger on episode_rating']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table season {
  id int [pk, increment]
  anime_id int [not null, ref: > anime.id]
  number smallint [not null]
  title varchar(255)
  year smallint
  avg_score numeric(7,5) [default: 0, note: 'Maintained by trigger on episode_rating']
  ratings_count int [default: 0, note: 'Maintained by trigger on episode_rating']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (anime_id, number) [unique]
  }
}

Table episode {
  id int [pk, increment]
  season_id int [not null, ref: > season.id]
  number smallint [not null]
  title varchar(255)
  synopsis text
  aired_at date
  duration_sec int
  avg_score numeric(7,5) [default: 0, note: 'Maintained by trigger on episode_rating']
  ratings_count int [default: 0, note: 'Maintained by trigger on episode_rating']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (season_id, number) [unique]
  }
}

// ─────────────────────────────────────────
// RATING
// ─────────────────────────────────────────

Table episode_rating {
  id int [pk, increment]
  episode_id int [not null, ref: > episode.id]
  user_id int [not null, ref: > user.id]
  score_story numeric(7,5) [not null, note: 'Weight 30%']
  score_animation numeric(7,5) [not null, note: 'Weight 25%']
  score_music numeric(7,5) [not null, note: 'Weight 20%']
  score_characters numeric(7,5) [not null, note: 'Weight 25%']
  final_score numeric(7,5) [not null, note: '(story*0.30)+(animation*0.25)+(music*0.20)+(characters*0.25)']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    (episode_id, user_id) [unique, note: 'One rating per user per episode']
  }
}

// ─────────────────────────────────────────
// COMMENTS
// ─────────────────────────────────────────

Table anime_comment {
  id int [pk, increment]
  anime_id int [not null, ref: > anime.id]
  user_id int [not null, ref: > user.id]
  body text [not null]
  likes_count int [default: 0, note: 'Maintained by trigger on comment_like']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table episode_comment {
  id int [pk, increment]
  episode_id int [not null, ref: > episode.id]
  user_id int [not null, ref: > user.id]
  body text [not null]
  likes_count int [default: 0, note: 'Maintained by trigger on comment_like']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
}

Table comment_like {
  id int [pk, increment]
  user_id int [not null, ref: > user.id]
  target_type varchar(20) [not null, note: 'anime_comment | episode_comment']
  target_id int [not null]

  indexes {
    (user_id, target_type, target_id) [unique, note: 'One like per user per comment']
  }
}

// ─────────────────────────────────────────
// PIVOT TABLES
// ─────────────────────────────────────────

Table anime_genre {
  anime_id int [not null, ref: > anime.id]
  genre_id int [not null, ref: > genre.id]

  indexes {
    (anime_id, genre_id) [pk]
  }
}